// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video 1`] = `
<View
  accessibilityLabel="Video Splash"
  focusable={true}
  testID="splash-component"
>
  <View>
    <Image
      aspectRatio={1.5}
      uri="b9a31d3949b1882a09ed2f8508d538f3"
    />
    <View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={48}
        bbWidth={48}
        fill="none"
        focusable={false}
        height={48}
        meetOrSlice={0}
        minX={0}
        minY={0}
        vbHeight={64}
        vbWidth={64}
        width={48}
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGRect
            fill={4278255629}
            height="64"
            opacity={0.6}
            propList={
              Array [
                "fill",
              ]
            }
            width="64"
            x={0}
            y={0}
          />
          <RNSVGPath
            d="M20 16V48L44 32L20 16Z"
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`2. video without a poster image 1`] = `
<View
  accessibilityLabel="Video Splash"
  focusable={true}
  testID="splash-component"
>
  <View>
    <View />
    <View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={48}
        bbWidth={48}
        fill="none"
        focusable={false}
        height={48}
        meetOrSlice={0}
        minX={0}
        minY={0}
        vbHeight={64}
        vbWidth={64}
        width={48}
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGRect
            fill={4278255629}
            height="64"
            opacity={0.6}
            propList={
              Array [
                "fill",
              ]
            }
            width="64"
            x={0}
            y={0}
          />
          <RNSVGPath
            d="M20 16V48L44 32L20 16Z"
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`3. 360 video 1`] = `
<View
  accessibilityLabel="Video Splash"
  focusable={true}
  testID="splash-component"
>
  <View>
    <Image
      aspectRatio={1.5}
      uri="b9a31d3949b1882a09ed2f8508d538f3"
    />
    <View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={48}
        bbWidth={48}
        fill="none"
        focusable={false}
        height={48}
        meetOrSlice={0}
        minX={0}
        minY={0}
        vbHeight={64}
        vbWidth={64}
        width={48}
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGRect
            fill={4278255629}
            height="64"
            opacity={0.6}
            propList={
              Array [
                "fill",
              ]
            }
            width="64"
            x={0}
            y={0}
          />
          <RNSVGPath
            d="M20 16V48L44 32L20 16Z"
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
